# mbstrdecoder

./: .gitignore  .travis.yml  Makefile  README.rst  appveyor.yml  make_deb_package.sh  pylama.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  lint_and_test.yml  on_push_default_branch.yml  publish.yml
.travis/: run_test.sh
debian/: changelog  control  copyright  rules
examples/: mbstrdecoder_examples.ipynb
mbstrdecoder/: __init__.py  __version__.py  _binary_ext_checker.py  _func.py  _mbstrdecoder.py  _six.py
requirements/: requirements.txt  test_requirements.txt
test/: test_binary_ext_checker.py  test_func.py  test_mbstrdecoder.py
